# zeta

./: .envrc.example  .gitignore  Cargo.toml  flake.nix
src/: main.rs  util.rs
src/agent/: runtime.rs
src/interface/: tui.rs
src/md/: SYSTEM.md
src/tools/: fs.rs  math.rs  memory.rs  mod.rs  shell.rs  web.rs
src/ui/: app.rs
