[package]
name = "zeta"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
futures = "0.3.32"
rig = "0.39.0"
serde = "1.0.228"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
uuid = { version = "1.23.4", features = ["v7"] }
directories = "6.0.0"
reqwest = { version = "0.13.4", features = ["query"] }
scraper = "0.27.0"
